--- a/tendo_news.css
+++ b/tendo_news.css
@@ -82,7 +82,7 @@ div.gallery img {
     width: 100%;
     height: 100%;
 	align-content: center;
-	border: solid 34px #9ad3de;
+	border: solid 20px #9ad3de;
 	border-top: solid 25px #9ad3de;
 	margin-bottom: -10px;
 }
@@ -108,9 +108,8 @@ a:active {
 }
 .desc {
     padding: 20px;
-	margin: 0px;
-	margin-top: -5%;
-	border-top: 10px;
+	margin-top: 0px;
+	border-top: 0px;
 	font-family: poppins;
 	background: #9ad3de;
 	font-size: 10pt;
@@ -118,6 +117,14 @@ a:active {
 }
 * {
     box-sizing: border-box;
+}
+.headline {
+	border: #ebf6f8;
+	background: #ebf6f8;
+	border-style: solid;
+	margin-top: -9%;
+	padding: 15px;
+	display: flex;
 }
 .responsive {
     padding: 0 6px;
@@ -156,13 +163,13 @@ div .so_me_buttons {
 	overflow: hidden !important;
 	background:#4bb5ab !important;
 	border: 0px !important;
-	margin: 0px !important;
+	margin: 0px 7px 0px 0px !important;
 	padding: 0px !important;
 	
 }
 div .so_me_logo_container {
 	height: 30px ;
-	width: 30px ;
+	width: 70px ;
 	display: flex;
 	float: right;
 	margin: 5px;
