--- a/tendo_news.css
+++ b/tendo_news.css
@@ -16,6 +16,10 @@ body {
 	text-decoration-style: none;
 	background: #f7fbfc
 }
+.wrapper {
+
+	z-index: 1;
+}
 #navbar_buttons {
 	background-color:#4BB4AD;
 	position: fixed;
@@ -24,6 +28,7 @@ body {
 	list-style-type: none;
 	width: 100%;
 	height: 80px;
+	z-index: 1;
 }
 #navbar_buttons a:link {
 	text-decoration: none;
@@ -48,6 +53,36 @@ body {
 	font-size: 8pt;
 	font-family: Lato-Bold;
 }
+/*Scroll down button*/
+.button {
+    background-color: #ffffff;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border: none;
+    border-radius: 50%;
+    text-decoration: none;
+    display: inline-block;
+    padding:15px;
+    margin: 15px;
+    cursor: pointer;
+    top: 79%;
+    left: 50%;
+    transform: translate(-80%, -80%);
+    position: relative;
+	
+}
+
+i {
+  border: solid #4BB4AD;
+  border-width: 0 6px 6px 0;
+  border-radius: 2px;
+  display: inline-block;
+  padding: 5px;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
 @media only screen and (max-width: 768px) {
 	#navbar_buttons {
 		width: 768px;
@@ -63,7 +98,6 @@ body {
 	position: fixed;
 }
 #screenshot_img {
-	padding-top: 80px;
 	width: 100%;
 	height: 100%;
 }
@@ -90,13 +124,25 @@ div.gallery:hover {
     style: none;
 }
 div.gallery img {
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 400px;
 	border: solid 40px #9ad3de;
 	border-top: solid 25px #9ad3de;
 	margin-bottom: -10px;
 	max-height: 300px;
 	max-width: 500px;
+}
+@media only screen and (max-width: 768px) {
+	div.gallery img {
+		height: 200px;
+		width: 300px;
+	}
+}
+@media only screen and (max-width: 378px) {
+	div.gallery img {
+		height: 240px;
+		width: 340px;
+	}
 }
 a {
 	text-decoration: none;
@@ -144,7 +190,7 @@ a:active {
 }
 @media only screen and (max-width: 400px) {
 	.newsbox_container {
-		width: 350px;
+		width: 310px;
 		height: 200px;
 		padding-left: 10px;
 	}
@@ -227,7 +273,7 @@ div .so_me_logo_container {
 	max-width: 1920px;
 	margin-top: 100px;
 	background-color: #4BB4AD;
-	height: 500px;
+	height: 400px;
 	min-width: 100%;
 }
 .footer_logo img {
@@ -246,42 +292,48 @@ div .so_me_logo_container {
 .we_are_tendo p {
 	margin-left: 65%;
 	font-family: poppins;
+	display: flex;
 }
 .footer_so_me {
 	max-width: 100px;
 	max-height: 30px;
-	margin: 75%;
+	margin: 65%;
 	display: flex;
 	margin-top: 3%
 }
 .footer_fb_logo {
 	width: 30px;
 	margin-right: 10px;
+	display: flex;
 }
 .footer_insta_logo {
 	width: 30px;
 	margin-left: 25%;
+	display: flex;
 }
 .footer_adresse h3 {
 	display: flex;
 	font-family: poppins;
 	margin: 25px 0 0 50px;
+	margin-top: -1050px;
 }
 .footer_adresse p {
 	display: flex;
 	font-family: poppins;
 	margin: 0 0 0 50px;
+	margin-top: 20px;
 }
 .footer_contact h3 {
 	display: flex;
 	font-family: poppins;
 	margin-left: 50px;
-	margin-bottom: -20px;
+	margin-top: 10px;
 }
 .footer_contact p {
 	display: flex;
 	font-family: poppins;
 	margin-left: 50px;
+	margin-top: 0px
 }
 .footer_block {
 	height: 100px;
@@ -293,4 +345,99 @@ div .so_me_logo_container {
 	background-color:#9AD3DE;
 	height: 50px;
 	width: 100%;
+}
+/* On small screens, hide navbar */
+@media only screen and (max-width: 740px) {
+  .navbar_li_item {
+    visibility: hidden;
+  }
+}
+
+.hamburgermenu {
+	display:none;
+}
+
+@media only screen and (max-width: 740px) {
+.hamburgermenu {
+
+    display: inline-block;
+    cursor: pointer;
+    top:0;
+    right: 0;
+    position: fixed;
+    padding-top: 20px;
+    padding-right: 30px;  }
+
+    /*hamburger menu lines*/
+.bar1, .bar2, .bar3 {
+
+    width: 35px;
+    height: 5px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin: 6px 0;
+    transition: 0.4s;
+
+}
+
+/* Rotate first bar */
+.change .bar1 {
+    transform: rotate(-45deg)translate(-8px, 7px) ;;
+    
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+    opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+    transform: rotate(45deg) translate(-8px, -8px) ;
+   
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+    margin-right: 70px;
+    margin-top: 20px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:1 ;
+	font-family: lato;
+	position: fixed;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu when the user clicks on the dropdown button */
+.show {display:block;}
 }
